--- a/ocr.css
+++ b/ocr.css
@@ -70,6 +70,7 @@ body {
   background: black;
   color: white;
   overflow: hidden;
+  height: 100vh;
   font-size: 15pt;
   font-family: monospace;
 }
