--- a/ocr.css
+++ b/ocr.css
@@ -42,6 +42,7 @@ body {
 #type {
   float: left;
   height: 100%;
+  mix-blend-mode: multiply;
   max-width: 50vw;
   image-rendering: -moz-crisp-edges;
   image-rendering: -o-crisp-edges;
