--- a/ocr.css
+++ b/ocr.css
@@ -1,138 +1,146 @@
 canvas {
-  position: relative;
+    position: relative;
 }
 
 body {
-  margin: 0;
+    margin: 0;
 }
 
 #txt,
 #wat,
 #line {
-  display: none;
+    display: none;
 }
 
 #full {
-  width: 50vw;
-  position: relative;
-  overflow: hidden;
-  z-index: -1;
-  display: block;
+    width: 50vw;
+    position: relative;
+    overflow: hidden;
+    z-index: -1;
+    display: block;
 }
 
 .iffy {
-  /*color: aqua; */
+    /*color: aqua; */
 }
 
 #page {
-  display: none;
-  top: 0;
-  right: 0;
-  z-index: 99;
+    display: none;
+    top: 0;
+    right: 0;
+    z-index: 99;
 }
 
 #chrs {
-  z-index: 99;
-  width: 100vw;
-  height: 15vh;
-  margin: 0;
-  overflow-x: visible;
+    z-index: 99;
+    width: 100vw;
+    height: 15vh;
+    margin: 0;
+    overflow-x: visible;
 }
 
 #type {
-  float: left;
-  height: 100%;
-  mix-blend-mode: multiply;
-  max-width: 50vw;
-  image-rendering: -moz-crisp-edges;
-  image-rendering: -o-crisp-edges;
-  image-rendering: pixelated;
-  image-rendering: crisp-edges;
+    float: left;
+    height: 100%;
+    mix-blend-mode: multiply;
+    max-width: 50vw;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;
 }
 
 #read {
-  letter-spacing: -0.05em;
-  position: absolute;
-  top: 0;
-  box-sizing: border-box;
-  padding: 0 3px;
-  left: 50vw;
-  height: auto;
-  max-height: 100vh;
-  width: 50vw;
-  word-break: break-all;
-  text-shadow: 2px 2px 0 black, -2px -2px 0 black;
-  background: transparent;
-  color: white;
-  overflow: hidden;
-  font-size: 15vh;
-  z-index: 999;
+    letter-spacing: -0.05em;
+    position: absolute;
+    top: 0;
+    box-sizing: border-box;
+    padding: 0 3px;
+    left: 50vw;
+    height: auto;
+    max-height: 100vh;
+    width: 50vw;
+    word-break: break-all;
+    text-shadow: 2px 2px 0 black, -2px -2px 0 black;
+    background: transparent;
+    color: white;
+    font-size: 15vh;
+    z-index: 999;
 }
 
 #json {
-  background: black;
-  color: white;
-  overflow: hidden;
-  height: 100vh;
-  font-size: 15pt;
-  font-family: monospace;
+    background: black;
+    color: white;
+    overflow: hidden;
+    height: 100vh;
+    font-size: 15pt;
+    font-family: monospace;
 }
 
 #top {
-  display: none;
+    display: none;
 }
 
 #text,
-#read {
-  font-family: monospace;
-  font-size: 80px;
+#read,
+#readword {
+    font-family: monospace;
+    font-size: 80px;
+}
+
+#readdata {
+    letter-spacing: normal;
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    font-size: 15pt;
 }
 
 .page {
-  border-bottom: 1px solid #333;
+    border-bottom: 1px solid #333;
 }
 
 #text {
-  text-shadow: 2 2 0 white;
-  text-shadow: -2 -2 0 white;
-  font-size: 15vh;
+    text-shadow: 2 2 0 white;
+    text-shadow: -2 -2 0 white;
+    font-size: 15vh;
 }
 
 #container {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 html,
 body,
 * {
-  cursor: none;
+    cursor: none;
 }
 
 .line {
-  margin-bottom: 3px;
+    margin-bottom: 3px;
 }
 
 #words {
-  position: absolute;
-  box-sizing: border-box;
-  padding: 0 3px;
-  background-color: black;
-  color: white;
-  top: 0;
-  padding-top: 15vh;
-  left: 50vw;
-  width: 50vw;
-  height: 100vh;
-  font-family: monospace;
-  overflow: hidden;
+    position: absolute;
+    box-sizing: border-box;
+    padding: 0 3px;
+    background-color: black;
+    color: white;
+    top: 0;
+    padding-top: 15vh;
+    left: 50vw;
+    width: 50vw;
+    height: 100vh;
+    font-family: monospace;
+    overflow: hidden;
 }
 
 #line {
-  display: none;
+    display: none;
 }
