--- a/ocr.css
+++ b/ocr.css
@@ -40,8 +40,11 @@ body {
 }
 
 #type {
+    position: absolute;
     float: left;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
+    max-height: 25vh;
     mix-blend-mode: multiply;
     max-width: 50vw;
     image-rendering: -moz-crisp-edges;
