--- a/ocr.css
+++ b/ocr.css
@@ -48,7 +48,7 @@ body {
     font-size: 4vh;
     color: rgba(248, 248, 255, 0.63);
     font-family: monospace;
-    background-color: rgba(0, 0, 0);
+    background-color: rgb(0, 0, 0);
     border-top: 1px solid #666
 }
 
