redactions are transparencies

--- a/tess.css
+++ b/tess.css
@@ -4,7 +4,7 @@ canvas {
 
 body {
     margin: 0;
-    background: black;
+    background: white;
 }
 
 #txt,
@@ -15,6 +15,7 @@ body {
 
 #full {
     width: 50vw;
+    background:black;
     position: relative;
     overflow: hidden;
     z-index: -1;
