--- a/ocrad.css
+++ b/ocrad.css
@@ -4,7 +4,7 @@ canvas {
 
 body {
     margin: 0;
-    background: black;
+    background: white;
 }
 
 #txt,
@@ -19,6 +19,7 @@ body {
     overflow: hidden;
     z-index: -1;
     display: block;
+    background: black;
 }
 
 #page {
